--- a/demo.html
+++ b/demo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>虚拟数字键盘</title>
-    <link rel="stylesheet" href="./css.css">
+    <link rel="stylesheet" href="fictitious.css">
     <style>
         #fictitious-number {
             width: 90%;
@@ -24,7 +24,7 @@
             padding: 0 10px;
         }
     </style>
-    <script src="./js.js"></script>
+    <script src="fictitious.js"></script>
 </head>
 <body>
     <div id="fictitious-number"></div>
